[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chrysalis-st"
version = "0.2.0"
authors = [
  {name="Demeter Túrós"},
]
description = "Powerful and lightweight package to identify tissue compartments in spatial transcriptomics datasets."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "archetypes==0.4.2",  # last version before PyTorch integration, chrysalis is not using that yet
    "matplotlib",
    "numpy",
    "pandas",
    "pysal",
    "scanpy",
    "scikit_learn",
    "scipy",
    "tqdm",
    "seaborn",
]

[project.urls]
"Homepage" = "https://github.com/rockdeme/chrysalis"
"Documentation" = "https://chrysalis.readthedocs.io/"

[tool.hatch.build.targets.wheel]
packages = ["chrysalis"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
    "/misc",
    "/plots",
    ".readthedocs.yaml",
]
